--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
+    "@iconify-json/lucide": "^1.2.74",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "astro": "^5.14.1",
+    "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.544.0",
+    "lucide-static": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "shiki": "^3.15.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
   }
